# stack-ex

./: .dockerignore  .gitignore  DockerFile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: githubaction_test.yml  test.yml
app/: __init__.py  hahaha.py
test/: example_test.py  test_hahaha.py
workflows/: githubaction_test.yml
